--- a/35-project/styles/main.css
+++ b/35-project/styles/main.css
@@ -19,6 +19,10 @@ header {
     border-bottom: 1px solid #aaa;
     box-shadow: 0px 1px 3px 3px #ccc;
     background: #fff;
+    z-index: 1;
+    position: fixed;
+    width: 100%;
+    top: 0;
 }
 
 header img {
